# scottish

./: .gitignore  LICENSE  README.md  scottish.cabal
src/Web/: Scottish.hs
src/Web/Scottish/: Database.hs
src/Web/Scottish/Database/: Persist.hs
