name:                scottish
version:             0.1.0.0
synopsis:            scotty with states
-- description:
homepage:            https://github.com/echaozh/scottish
license:             BSD3
license-file:        LICENSE
author:              Zhang Yichao
maintainer:          echaozh@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Web.Scottish,
                       Web.Scottish.Database
                       Web.Scottish.Database.Persist
  -- other-modules:
  -- other-extensions:
  build-depends:       base          >=4.6     && <4.7
                     , data-default  >=0.5     && <0.6
                     , http-types    >= 0.8    && <0.9
                     , lens          >=3.10    && <4.1
                     , mtl           >=2.1     && <2.2
                     , persistent    >=1.3     && <1.4
                     , resource-pool >=0.2     && <0.3
                     , scotty        >=0.6     && <0.8
                     , stm           >=2.4     && <2.5
                     , text          >=1.0     && <1.1
                     , transformers  >=0.3     && <0.4
                     , wai           >=2.0     && <2.2
                     , warp          >=2.0.3.3 && <2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
